--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
+    "axios": "^0.16.1",
     "lodash": "^4.17.4",
     "react": "^15.5.4"
   },
