--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "react": "^15.5.4"
   },
